# unity-foxglove-sdk

./: .gitignore  00_PLAN.md  01_PHASE0_PLAN.md  02_PHASE1_PLAN.md  03_PHASE2_PLAN.md  04_PHASE3_PLAN.md  05_PHASE4_PLAN.md  06_PHASE5_PLAN.md  07_PHASE6_PLAN.md  08_PHASE7_PLAN.md  09_PHASE8_PLAN.md  10_PHASE9_PLAN.md  11_PHASE10_PLAN.md  12_PHASE11_PLAN.md  13_PHASE12_PLAN.md  14_PHASE13_PLAN.md  15_PHASE14_PLAN.md  16_PHASE15_PLAN.md  17_PHASE16_PLAN.md  18_PHASE17_PLAN.md  CHANGELOG.md  CITATION.cff  PAPER.md  PHASE0_PLAN.md  PLAN.md  README.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  THIRD_PARTY_NOTICES.md
Developer/: 06 MCAP Recording and Replay.md  110 Phase134 39-43 Review Fix Evidence.md  138D_PHASE138D_VIRTUAL_IMU_SENSOR_ACCEPTANCE.md  138E_PHASE138E_BURST_JOB_NATIVEARRAY_POINT_CLOUD_ACCEPTANCE.md  28 Critical Stability and Security Fixes.md  99 Phase116-120 Unity MCAP Recording Acceptance.md  MCAP CSharp Conformance Baseline.md  MCAP DataLoader Hardening Review Closure.md  MCAP Official Compatibility Gate.md  MCAP Remote Data Source Boundary.md  MCAP Spec Parity Matrix.md
Pictures/: Unity2Foxglove-Overview.excalidraw  Unity2Foxglove-Project-Layout.excalidraw
Plan/: 138E_PHASE138E_BURST_JOB_NATIVEARRAY_POINT_CLOUD_PIPELINE_PLAN.md
Scripts/: README.md  build_unity_il2cpp.py  bump_version.py  run_performance_baseline.py  sync_full_demo_sample.py  validate_release_package.py
Tools/ros2_bridge/unity2foxglove_ros2_bridge/: CMakeLists.txt  README.md  package.xml
Tools/ros2_bridge/unity2foxglove_ros2_bridge/launch/: unity2foxglove_bridge.launch.py
Tools/ros2_bridge/unity2foxglove_ros2_bridge/scripts/: run_bridge_sample.ps1  run_bridge_sample.sh
Tools/ros2_bridge/unity2foxglove_ros2_bridge/src/: unity2foxglove_ros2_bridge.cpp
(+190 files in other folders)
